# aiogram-bot-tester

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: TUTORIAL_EN.MD  TUTORIAL_RU.md
src/aiogram_bot_tester/: __init__.py  bot_tester.py  convo.py  exceptions.py  types.py
tests/: test_api.py  test_assertions.py  test_long_flow.py
