[project]
name = "aiogram_bot_tester"
version = "0.3.0"
description = "Test your Telegram bots easily"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Typing :: Typed",
]
dependencies = [
    "aiogram>=3.28.2",
]

[project.urls]
Homepage = "https://github.com/samedit66/aiogram-bot-tester"
Issues = "https://github.com/samedit66/aiogram-bot-tester/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
